--- a/src/main/resources/templates/CRecordList.html
+++ b/src/main/resources/templates/CRecordList.html
@@ -57,27 +57,27 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
-                       aria-expanded="false">文章<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/articleList">文章列表</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="/newArticle">发文</a></li>
-                        <li><a href="/myArticle">我的文章</a></li>
-                        <li><a href="/recycledArticle">回收站</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
-                       aria-expanded="false">物品<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a id="myItem" href="#">我的物品</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a id="applyItem" href="#">领用申请</a></li>
-                        <li><a id="applyRecord" href="#">申请记录</a></li>
-                    </ul>
-                </li>
+                <!--<li class="dropdown">-->
+                    <!--<a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"-->
+                       <!--aria-expanded="false">文章<span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="/articleList">文章列表</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+                        <!--<li><a href="/newArticle">发文</a></li>-->
+                        <!--<li><a href="/myArticle">我的文章</a></li>-->
+                        <!--<li><a href="/recycledArticle">回收站</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+                <!--<li class="dropdown">-->
+                    <!--<a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"-->
+                       <!--aria-expanded="false">物品<span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a id="myItem" href="#">我的物品</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+                        <!--<li><a id="applyItem" href="#">领用申请</a></li>-->
+                        <!--<li><a id="applyRecord" href="#">申请记录</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
                        aria-expanded="false">食堂应用<span class="caret"></span></a>
