--- a/src/main/resources/templates/sysBackend-canteen.html
+++ b/src/main/resources/templates/sysBackend-canteen.html
@@ -87,9 +87,9 @@
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="#" onclick="goToPersonCtrl();">人员管理</a></li>
                 <li class="active"><a href="#" onclick="goToCanteenCtrl();">食堂管理</a></li>
-                <li><a href="#">文章管理</a></li>
-                <li><a href="#">物品管理</a></li>
-                <li><a href="#" onclick="goToSettingCtrl()">系统设置</a></li>
+                <!--<li><a href="#">文章管理</a></li>-->
+                <!--<li><a href="#">物品管理</a></li>-->
+                <!--<li><a href="#" onclick="goToSettingCtrl()">系统设置</a></li>-->
                 <!--<li class="dropdown">-->
                     <!--<a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"-->
                        <!--aria-expanded="false">系统设置<span class="caret"></span></a>-->
@@ -122,7 +122,7 @@
                             <li class="active"><a href="#orderList">查看订餐情况</a></li>
                             <li><a href="#generateNamelist">订餐名单</a></li>
                             <li><a href="#orderRecode">查看订餐记录</a></li>
-                            <li><a href="#canteenStatistics">每月统计</a></li>
+                            <!--<li><a href="#canteenStatistics">每月统计</a></li>-->
                             <li><a href="#menu">菜单设置</a></li>
                         </ul>
                     </div>
@@ -242,15 +242,15 @@
 
                     </div>
                 </div>
-                <div id="canteenStatistics" class="row ctrlCompent">
-                    <div  class="page-header col-md-12 col-sm-12 col-xs-12">
-                        <h1>每月统计 <small>Statistics</small></h1>
-                    </div>
-                    <div id="msgDiv3"class="col-md-12 col-sm-12 col-xs-12" style="height: auto"></div>
-                    <div class="tableDiv">
-                        <table id="statisticsTable"></table>
-                    </div>
-                </div>
+                <!--<div id="canteenStatistics" class="row ctrlCompent">-->
+                    <!--<div  class="page-header col-md-12 col-sm-12 col-xs-12">-->
+                        <!--<h1>每月统计 <small>Statistics</small></h1>-->
+                    <!--</div>-->
+                    <!--<div id="msgDiv3"class="col-md-12 col-sm-12 col-xs-12" style="height: auto"></div>-->
+                    <!--<div class="tableDiv">-->
+                        <!--<table id="statisticsTable"></table>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <div id="menu" class="row ctrlCompent">
                     <div  class="page-header col-md-12 col-sm-12 col-xs-12">
                         <h1>菜单设置 <small>Menu</small></h1>
@@ -678,11 +678,15 @@
                     data: {"list":JSON.stringify(row)},
                     success: function (data, status) {
                         if (status == "success") {
+                            if (data.statusCode === 500){
+                                alert(data.msg);
+                                return false;
+                            }
                             $('#recordTable').bootstrapTable('refresh');
                         }
                     },
                     error: function () {
-                        alert("Error");
+                        alert("服务器端发生错误");
                     },
                     complete: function () {
 
