--- a/src/main/resources/templates/sysBackend.html
+++ b/src/main/resources/templates/sysBackend.html
@@ -53,9 +53,9 @@
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="#" onclick="goToPersonCtrl()">人员管理</a></li>
                 <li><a href="#" onclick="goToCanteenCtrl()">食堂管理</a></li>
-                <li><a href="#">文章管理</a></li>
-                <li><a href="#">物品管理</a></li>
-                <li><a href="#" onclick="goToSettingCtrl()">系统设置</a></li>
+                <!--<li><a href="#">文章管理</a></li>-->
+                <!--<li><a href="#">物品管理</a></li>-->
+                <!--<li><a href="#" onclick="goToSettingCtrl()">系统设置</a></li>-->
                 <!--<li class="dropdown">-->
                     <!--<a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"-->
                        <!--aria-expanded="false">系统设置<span class="caret"></span></a>-->
